--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "css-loader": "^0.24.0",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^3.1.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
     "style-loader": "^0.13.1",
     "vue-hot-reload-api": "^2.0.6",
     "vue-html-loader": "^1.2.3",
