--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "guid": "0.0.12",
     "vue": "^2.1.6",
+    "vue-infinite-loading": "^2.0.0-rc.5",
     "vue-material": "^0.5.2",
     "vuex": "^2.1.1"
   }
