--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   },
   "dependencies": {
     "guid": "0.0.12",
+    "pure-css-loader": "^2.0.1",
+    "sweetalert2": "^6.3.0",
     "vue": "^2.1.6",
     "vue-infinite-loading": "^2.0.0-rc.5",
     "vue-material": "^0.5.2",
